separated standard models

--- a/lazy_fca/effects_on_maths_study.ipynb
+++ b/lazy_fca/effects_on_maths_study.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:48:20.796270500Z",
-     "start_time": "2023-11-29T04:48:20.791203300Z"
+     "end_time": "2023-11-29T09:31:05.229679700Z",
+     "start_time": "2023-11-29T09:31:05.185168900Z"
     }
    },
    "outputs": [],
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T05:10:37.258545900Z",
-     "start_time": "2023-11-29T05:10:37.237583400Z"
+     "end_time": "2023-11-29T09:59:06.654388600Z",
+     "start_time": "2023-11-29T09:59:06.635126400Z"
     }
    },
    "outputs": [
@@ -40,27 +40,26 @@
       "text/plain": "  school sex  age address famsize Pstatus  Medu  Fedu  traveltime  studytime  \\\n0     GP   F   18       U     GT3       A     4     4           2          2   \n1     GP   F   17       U     GT3       T     1     1           1          2   \n2     GP   F   15       U     LE3       T     1     1           1          2   \n3     GP   F   15       U     GT3       T     4     2           1          3   \n4     GP   F   16       U     GT3       T     3     3           1          2   \n\n   ...  internet romantic famrel freetime goout Dalc Walc health absences  \\\n0  ...        no       no      4        3     4    1    1      3        6   \n1  ...       yes       no      5        3     3    1    1      3        4   \n2  ...       yes       no      4        3     2    2    3      3       10   \n3  ...       yes      yes      3        2     2    1    1      5        2   \n4  ...        no       no      4        3     2    1    2      5        4   \n\n      G3  \n0  False  \n1  False  \n2   True  \n3   True  \n4   True  \n\n[5 rows x 27 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>school</th>\n      <th>sex</th>\n      <th>age</th>\n      <th>address</th>\n      <th>famsize</th>\n      <th>Pstatus</th>\n      <th>Medu</th>\n      <th>Fedu</th>\n      <th>traveltime</th>\n      <th>studytime</th>\n      <th>...</th>\n      <th>internet</th>\n      <th>romantic</th>\n      <th>famrel</th>\n      <th>freetime</th>\n      <th>goout</th>\n      <th>Dalc</th>\n      <th>Walc</th>\n      <th>health</th>\n      <th>absences</th>\n      <th>G3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>18</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>A</td>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>...</td>\n      <td>no</td>\n      <td>no</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>6</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>17</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>...</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>LE3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>...</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n      <td>10</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n      <td>...</td>\n      <td>yes</td>\n      <td>yes</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>16</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n      <td>...</td>\n      <td>no</td>\n      <td>no</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>5</td>\n      <td>4</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 27 columns</p>\n</div>"
      },
-     "execution_count": 85,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/EffectsOnMathsStudy.csv\").drop(\n",
+    "df = pd.read_csv(\"../data/EffectsOnMathsStudy.csv\").drop(\n",
     "    [\"G1\", \"G2\", \"Mjob\", \"Fjob\", \"reason\", \"guardian\"], axis=1\n",
     ")\n",
     "df[\"G3\"] = df[\"G3\"].map(lambda val: val >= 10)\n",
-    "column_names = df.columns.values\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T05:10:37.867249800Z",
-     "start_time": "2023-11-29T05:10:37.839541500Z"
+     "end_time": "2023-11-29T09:31:05.276181900Z",
+     "start_time": "2023-11-29T09:31:05.205364900Z"
     }
    },
    "outputs": [],
@@ -113,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T05:10:38.438358800Z",
-     "start_time": "2023-11-29T05:10:38.430837700Z"
+     "end_time": "2023-11-29T09:31:05.276181900Z",
+     "start_time": "2023-11-29T09:31:05.229679700Z"
     }
    },
    "outputs": [],
@@ -129,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T05:10:38.965774Z",
-     "start_time": "2023-11-29T05:10:38.797929800Z"
+     "end_time": "2023-11-29T09:31:05.420368800Z",
+     "start_time": "2023-11-29T09:31:05.229679700Z"
     }
    },
    "outputs": [],
@@ -143,11 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T05:10:39.924027900Z",
-     "start_time": "2023-11-29T05:10:39.916555900Z"
+     "end_time": "2023-11-29T09:31:05.420368800Z",
+     "start_time": "2023-11-29T09:31:05.411283800Z"
     }
    },
    "outputs": [
@@ -174,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:50:39.590291800Z",
-     "start_time": "2023-11-29T04:50:39.573825100Z"
+     "end_time": "2023-11-29T09:31:05.454972200Z",
+     "start_time": "2023-11-29T09:31:05.420368800Z"
     }
    },
    "outputs": [
@@ -187,27 +186,26 @@
       "text/plain": "  school sex  age address famsize Pstatus  Medu  Fedu  traveltime  studytime  \\\n0     GP   F   18       U     GT3       A     4     4           2          2   \n1     GP   F   17       U     GT3       T     1     1           1          2   \n2     GP   F   15       U     LE3       T     1     1           1          2   \n3     GP   F   15       U     GT3       T     4     2           1          3   \n4     GP   F   16       U     GT3       T     3     3           1          2   \n\n   ...  internet romantic famrel freetime goout Dalc Walc health absences  \\\n0  ...        no       no      4        3     4    1    1      3        6   \n1  ...       yes       no      5        3     3    1    1      3        4   \n2  ...       yes       no      4        3     2    2    3      3       10   \n3  ...       yes      yes      3        2     2    1    1      5        2   \n4  ...        no       no      4        3     2    1    2      5        4   \n\n      G3  \n0  False  \n1  False  \n2   True  \n3   True  \n4   True  \n\n[5 rows x 27 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>school</th>\n      <th>sex</th>\n      <th>age</th>\n      <th>address</th>\n      <th>famsize</th>\n      <th>Pstatus</th>\n      <th>Medu</th>\n      <th>Fedu</th>\n      <th>traveltime</th>\n      <th>studytime</th>\n      <th>...</th>\n      <th>internet</th>\n      <th>romantic</th>\n      <th>famrel</th>\n      <th>freetime</th>\n      <th>goout</th>\n      <th>Dalc</th>\n      <th>Walc</th>\n      <th>health</th>\n      <th>absences</th>\n      <th>G3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>18</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>A</td>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>...</td>\n      <td>no</td>\n      <td>no</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>6</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>17</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>...</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>LE3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>...</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n      <td>10</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n      <td>...</td>\n      <td>yes</td>\n      <td>yes</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>16</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n      <td>...</td>\n      <td>no</td>\n      <td>no</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>5</td>\n      <td>4</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 27 columns</p>\n</div>"
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/EffectsOnMathsStudy.csv\").drop(\n",
+    "df = pd.read_csv(\"../data/EffectsOnMathsStudy.csv\").drop(\n",
     "    [\"G1\", \"G2\", \"Mjob\", \"Fjob\", \"reason\", \"guardian\"], axis=1\n",
     ")\n",
     "df[\"G3\"] = df[\"G3\"].map(lambda val: val >= 10)\n",
-    "column_names = df.columns.values\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:50:39.832626700Z",
-     "start_time": "2023-11-29T04:50:39.772590200Z"
+     "end_time": "2023-11-29T09:31:05.454972200Z",
+     "start_time": "2023-11-29T09:31:05.440642200Z"
     }
    },
    "outputs": [],
@@ -220,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:50:39.942564700Z",
-     "start_time": "2023-11-29T04:50:39.922286400Z"
+     "end_time": "2023-11-29T09:31:05.506354200Z",
+     "start_time": "2023-11-29T09:31:05.446708800Z"
     }
    },
    "outputs": [],
@@ -240,11 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:50:44.341028600Z",
-     "start_time": "2023-11-29T04:50:40.048048400Z"
+     "end_time": "2023-11-29T09:31:09.981850600Z",
+     "start_time": "2023-11-29T09:31:05.454972200Z"
     }
    },
    "outputs": [],
@@ -254,11 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:50:44.354042500Z",
-     "start_time": "2023-11-29T04:50:44.343471700Z"
+     "end_time": "2023-11-29T09:31:09.996803400Z",
+     "start_time": "2023-11-29T09:31:09.986028100Z"
     }
    },
    "outputs": [
@@ -275,19 +273,6 @@
     "print(accuracy_score(y_test, pat_cls.predictions))\n",
     "print(f1_score(y_test, pat_cls.predictions, average=\"weighted\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T04:27:14.907193400Z",
-     "start_time": "2023-11-29T04:27:14.898069100Z"
-    }
-   }
   }
  ],
  "metadata": {
