--- a/lazy_fca/wine_quality.ipynb
+++ b/lazy_fca/wine_quality.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:00.918546200Z",
-     "start_time": "2023-11-29T04:35:59.990655600Z"
+     "end_time": "2023-11-29T09:31:03.201247300Z",
+     "start_time": "2023-11-29T09:31:03.148296700Z"
     }
    },
    "outputs": [],
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:01.600329500Z",
-     "start_time": "2023-11-29T04:36:01.561331500Z"
+     "end_time": "2023-11-29T09:59:30.153584Z",
+     "start_time": "2023-11-29T09:59:30.118434900Z"
     }
    },
    "outputs": [
@@ -40,25 +40,24 @@
       "text/plain": "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n0            7.4              0.70         0.00             1.9      0.076   \n1            7.8              0.88         0.00             2.6      0.098   \n2            7.8              0.76         0.04             2.3      0.092   \n3           11.2              0.28         0.56             1.9      0.075   \n4            7.4              0.70         0.00             1.9      0.076   \n\n   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n0                 11.0                  34.0   0.9978  3.51       0.56   \n1                 25.0                  67.0   0.9968  3.20       0.68   \n2                 15.0                  54.0   0.9970  3.26       0.65   \n3                 17.0                  60.0   0.9980  3.16       0.58   \n4                 11.0                  34.0   0.9978  3.51       0.56   \n\n   alcohol  quality  \n0      9.4    False  \n1      9.8    False  \n2      9.8    False  \n3      9.8     True  \n4      9.4    False  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fixed acidity</th>\n      <th>volatile acidity</th>\n      <th>citric acid</th>\n      <th>residual sugar</th>\n      <th>chlorides</th>\n      <th>free sulfur dioxide</th>\n      <th>total sulfur dioxide</th>\n      <th>density</th>\n      <th>pH</th>\n      <th>sulphates</th>\n      <th>alcohol</th>\n      <th>quality</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>7.4</td>\n      <td>0.70</td>\n      <td>0.00</td>\n      <td>1.9</td>\n      <td>0.076</td>\n      <td>11.0</td>\n      <td>34.0</td>\n      <td>0.9978</td>\n      <td>3.51</td>\n      <td>0.56</td>\n      <td>9.4</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>7.8</td>\n      <td>0.88</td>\n      <td>0.00</td>\n      <td>2.6</td>\n      <td>0.098</td>\n      <td>25.0</td>\n      <td>67.0</td>\n      <td>0.9968</td>\n      <td>3.20</td>\n      <td>0.68</td>\n      <td>9.8</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>7.8</td>\n      <td>0.76</td>\n      <td>0.04</td>\n      <td>2.3</td>\n      <td>0.092</td>\n      <td>15.0</td>\n      <td>54.0</td>\n      <td>0.9970</td>\n      <td>3.26</td>\n      <td>0.65</td>\n      <td>9.8</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11.2</td>\n      <td>0.28</td>\n      <td>0.56</td>\n      <td>1.9</td>\n      <td>0.075</td>\n      <td>17.0</td>\n      <td>60.0</td>\n      <td>0.9980</td>\n      <td>3.16</td>\n      <td>0.58</td>\n      <td>9.8</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7.4</td>\n      <td>0.70</td>\n      <td>0.00</td>\n      <td>1.9</td>\n      <td>0.076</td>\n      <td>11.0</td>\n      <td>34.0</td>\n      <td>0.9978</td>\n      <td>3.51</td>\n      <td>0.56</td>\n      <td>9.4</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/WineQT.csv\").drop([\"Id\"], axis=1)\n",
+    "df = pd.read_csv(\"../data/WineQT.csv\").drop([\"Id\"], axis=1)\n",
     "df[\"quality\"] = df[\"quality\"].map(lambda val: val > 5)\n",
-    "column_names = df.columns.values\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:02.485887600Z",
-     "start_time": "2023-11-29T04:36:02.461240200Z"
+     "end_time": "2023-11-29T09:31:03.286556900Z",
+     "start_time": "2023-11-29T09:31:03.176669900Z"
     }
    },
    "outputs": [],
@@ -75,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:06.771682300Z",
-     "start_time": "2023-11-29T04:36:06.771178100Z"
+     "end_time": "2023-11-29T09:31:03.286556900Z",
+     "start_time": "2023-11-29T09:31:03.194200200Z"
     }
    },
    "outputs": [],
@@ -91,11 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:09.397417900Z",
-     "start_time": "2023-11-29T04:36:07.161456600Z"
+     "end_time": "2023-11-29T09:31:05.506354200Z",
+     "start_time": "2023-11-29T09:31:03.201247300Z"
     }
    },
    "outputs": [],
@@ -105,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:09.413333400Z",
-     "start_time": "2023-11-29T04:36:09.397417900Z"
+     "end_time": "2023-11-29T09:31:05.506354200Z",
+     "start_time": "2023-11-29T09:31:05.451930700Z"
     }
    },
    "outputs": [
@@ -136,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:16.675763400Z",
-     "start_time": "2023-11-29T04:36:16.640762900Z"
+     "end_time": "2023-11-29T09:31:05.562474400Z",
+     "start_time": "2023-11-29T09:31:05.460938100Z"
     }
    },
    "outputs": [
@@ -149,25 +148,24 @@
       "text/plain": "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n0            7.4              0.70         0.00             1.9      0.076   \n1            7.8              0.88         0.00             2.6      0.098   \n2            7.8              0.76         0.04             2.3      0.092   \n3           11.2              0.28         0.56             1.9      0.075   \n4            7.4              0.70         0.00             1.9      0.076   \n\n   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n0                 11.0                  34.0   0.9978  3.51       0.56   \n1                 25.0                  67.0   0.9968  3.20       0.68   \n2                 15.0                  54.0   0.9970  3.26       0.65   \n3                 17.0                  60.0   0.9980  3.16       0.58   \n4                 11.0                  34.0   0.9978  3.51       0.56   \n\n   alcohol  quality  \n0      9.4    False  \n1      9.8    False  \n2      9.8    False  \n3      9.8     True  \n4      9.4    False  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fixed acidity</th>\n      <th>volatile acidity</th>\n      <th>citric acid</th>\n      <th>residual sugar</th>\n      <th>chlorides</th>\n      <th>free sulfur dioxide</th>\n      <th>total sulfur dioxide</th>\n      <th>density</th>\n      <th>pH</th>\n      <th>sulphates</th>\n      <th>alcohol</th>\n      <th>quality</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>7.4</td>\n      <td>0.70</td>\n      <td>0.00</td>\n      <td>1.9</td>\n      <td>0.076</td>\n      <td>11.0</td>\n      <td>34.0</td>\n      <td>0.9978</td>\n      <td>3.51</td>\n      <td>0.56</td>\n      <td>9.4</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>7.8</td>\n      <td>0.88</td>\n      <td>0.00</td>\n      <td>2.6</td>\n      <td>0.098</td>\n      <td>25.0</td>\n      <td>67.0</td>\n      <td>0.9968</td>\n      <td>3.20</td>\n      <td>0.68</td>\n      <td>9.8</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>7.8</td>\n      <td>0.76</td>\n      <td>0.04</td>\n      <td>2.3</td>\n      <td>0.092</td>\n      <td>15.0</td>\n      <td>54.0</td>\n      <td>0.9970</td>\n      <td>3.26</td>\n      <td>0.65</td>\n      <td>9.8</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11.2</td>\n      <td>0.28</td>\n      <td>0.56</td>\n      <td>1.9</td>\n      <td>0.075</td>\n      <td>17.0</td>\n      <td>60.0</td>\n      <td>0.9980</td>\n      <td>3.16</td>\n      <td>0.58</td>\n      <td>9.8</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7.4</td>\n      <td>0.70</td>\n      <td>0.00</td>\n      <td>1.9</td>\n      <td>0.076</td>\n      <td>11.0</td>\n      <td>34.0</td>\n      <td>0.9978</td>\n      <td>3.51</td>\n      <td>0.56</td>\n      <td>9.4</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/WineQT.csv\").drop([\"Id\"], axis=1)\n",
+    "df = pd.read_csv(\"../data/WineQT.csv\").drop([\"Id\"], axis=1)\n",
     "df[\"quality\"] = df[\"quality\"].map(lambda val: val > 5)\n",
-    "column_names = df.columns.values\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:17.770123800Z",
-     "start_time": "2023-11-29T04:36:17.753022800Z"
+     "end_time": "2023-11-29T09:31:05.562474400Z",
+     "start_time": "2023-11-29T09:31:05.496005Z"
     }
    },
    "outputs": [],
@@ -180,11 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:19.797655500Z",
-     "start_time": "2023-11-29T04:36:19.793219700Z"
+     "end_time": "2023-11-29T09:31:05.562474400Z",
+     "start_time": "2023-11-29T09:31:05.504923200Z"
     }
    },
    "outputs": [],
@@ -200,11 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:47.929200100Z",
-     "start_time": "2023-11-29T04:36:20.711701500Z"
+     "end_time": "2023-11-29T09:31:33.567643900Z",
+     "start_time": "2023-11-29T09:31:05.506354200Z"
     }
    },
    "outputs": [],
@@ -214,11 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-29T04:36:47.940040800Z",
-     "start_time": "2023-11-29T04:36:47.929200100Z"
+     "end_time": "2023-11-29T09:31:33.581022600Z",
+     "start_time": "2023-11-29T09:31:33.568707400Z"
     }
    },
    "outputs": [
@@ -235,19 +233,6 @@
     "print(accuracy_score(y_test, pat_cls.predictions))\n",
     "print(f1_score(y_test, pat_cls.predictions))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T04:27:14.907193400Z",
-     "start_time": "2023-11-29T04:27:14.898069100Z"
-    }
-   }
   }
  ],
  "metadata": {
